# study

./: .gitignore
chatgpt/: .gitignore
chatgpt/chat-local-llm/: chat-local-llm-eliza.py  chat-local-llm.py  pyproject.toml  rest-client.py
chatgpt/chat-ui/: README.md  main.py  pyproject.toml
chatgpt/chatai-spa/: ChatAI-SPA-worklog.ipynb
chatgpt/chatai-spa/api/: handler.py  pyproject.toml  serverless.yml
chatgpt/chatai-spa/frontend/: .env.example  package.json  serverless.yml
chatgpt/chatai-spa/frontend/src/: App.tsx
chatgpt/chatgpt-assistants-api/: README.md
chatgpt/chatgpt-function/: get_mood.ipynb  get_openai.ipynb
chatgpt/fm-synth/: kirakira.py
chatgpt/get-holidays/: README.md  get-holidays.spec  pyproject.toml
chatgpt/gradio/: README.md  try-gradio-chatai.ipynb  try-gradio-langchain-websearch.ipynb  try-gradio.ipynb
chatgpt/java-consumer/: README.md  docker-compose.yml  pom.xml
chatgpt/java-consumer/src/main/java/com/example/pulsar/: MyPulsarApp.java  MyPulsarListenerService.java
chatgpt/java-consumer/src/test/java/com/example/pulsar/: MyPulsarAppTest.java
chatgpt/jupyter-bash-test/: jupyter-bash.ipynb
chatgpt/langchain/: .gitignore  README.md  langchain-agent.ipynb  langchain-basic.ipynb  langchain-indexes.ipynb  langchain-pdf.ipynb  langchain-search-web.ipynb  pyproject.toml  summaryze-and-translate-youtube.ipynb
chatgpt/langchain-plan-and-execute-agent/: langchain-plan-and-execute-agent.ipynb  pyproject.toml
chatgpt/llama2-elyza-langchain/: .env.example  README.md  llama-cpp-python-elyza-langchain.py  llama-cpp-python-elyza.py  pyproject.toml
chatgpt/oekaki/: .gitignore  .tool-versions  HelloHogeDiffusion.ipynb
chatgpt/openai-alexa-skill/: .env.example  README.md  chatgpt.ts  handler.ts  package.json  serverless.yml
chatgpt/run-opencalm-3b/: pyproject.toml  run-opencalm-3b.ipynb
chatgpt/tenki-json-parse/: data.json
chatgpt/text-to-speach/: .gitignore  text-to-speach.ipynb
chatgpt/white-noise-web/: .terraform.lock.hcl  README.md  backend.tf  main.tf
chatgpt/white-noise-web/assets/: error.html  index.html  script.js  styles.css
copilot/: README.md
copilot/get-holidays/: main.py
go/: .gitignore  README.md
go/cmdwrap/: cmdwrap.go
go/exec_command/: main.go
go/flag/: main.go
go/mysql/: mysql.go
go/query_athena/: main.go
go/study_cli/: Gopkg.toml  main.go
go/test_samples/: calc_test.go
kubernetes/ingress/: deployment.yml  ingress.yml
kubernetes/study-ecs/: README.md  cfn-fargate.yml  cfn-vpc.yml
m5stack/: .gitignore  README.md
m5stack/HelloM5Avatar/: README.md  platformio.ini
m5stack/HelloM5Avatar/src/: main.cpp
m5stack/HelloPIO/: README.md  platformio.ini
m5stack/HelloPIO/src/: main.cpp
m5stack/HelloWAV/: README.md  platformio.ini
m5stack/HelloWAV/src/: main.cpp
m5stack/mpy/: README.md  upytest01.py  upytest02.py  upytest03.py
m5stack/tool-py/: README.md  create-audio-file.py  requirements.txt
prometheus/study-prometheus/: grafana-datasource.yml  grafana.yml  prometheus-config.yml  prometheus.yml
terraform/simple-go-api-tf/: .gitignore  .terraform.lock.hcl  Dockerfile  README.md  go.mod  infra.tf  main.go
