[tool.poetry]
name = "langchain-plan-and-execute-agent"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "0.1.12"
langchain-openai = "0.0.8"
tavily-python = "0.3.1"
langchainhub = "0.1.15"
langgraph = "0.0.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
