[tool.poetry]
name = "study-langchain"
version = "0.1.0"
description = ""
authors = ["kukai"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "0.1.9"
openai = "^1.6.1"
youtube-transcript-api = "^0.6.2"
pymongo = "^4.6.2"
langchain-openai = "^0.0.8"
langchain-community = "0.0.24"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
