[tool.poetry]
name = "llama2-elyza-langchain"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llama-cpp-python = {extras = ["server"], version = "^0.2.26"}
langchain = "^0.0.354"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
