[tool.poetry]
name = "run-opencalm-3b"
version = "0.1.0"
description = ""
authors = ["kukai"]
readme = "README.md"
packages = [{include = "run_opencalm_3b"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
transformers = "^4.29.2"
accelerate = "^0.19.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
