[tool.poetry]
name = "chatai-spa"
version = "0.1.0"
description = ""
authors = ["kukai"]
license = "MIT"
readme = "README.md"
packages = [{include = "chatai_spa"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.7"
aws-lambda-powertools = "^2.16.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
